# webbridge-hackathon

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD-PARTY-NOTICES.txt  build.bat  conanfile.py  configure.bat  environment.yml  generate_all.ps1
cmake/: webbridge.cmake
doc/: performance.md  sync_call_optimization.md  timing.md  v8_optimizations.md
frontend/: CMakeLists.txt  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.svelte  WebBridgeError.ts  main.ts
frontend/src/webbridge/: index.ts  webbridge-runtime.ts  webbridge-types.ts
src/: CMakeLists.txt  MyObject.cpp  MyObject.h  ResourceServer.h  TestObject.cpp  TestObject.h  TestObject1.cpp  TestObject1.h  TestObject10.cpp  TestObject10.h  TestObject11.cpp  TestObject11.h  TestObject12.cpp  TestObject12.h  TestObject13.cpp  TestObject13.h  TestObject14.cpp  TestObject14.h  TestObject15.cpp  TestObject15.h  TestObject16.cpp  TestObject16.h  TestObject17.cpp  TestObject17.h  TestObject18.cpp  TestObject18.h  TestObject19.cpp  TestObject19.h  TestObject2.cpp  TestObject2.h  TestObject20.cpp  TestObject20.h  TestObject21.cpp  TestObject21.h  TestObject22.cpp  TestObject22.h  TestObject23.cpp  TestObject23.h  TestObject24.cpp  TestObject24.h  (+38 more)
src/resources/: index.html
src/webbridge/: Error.h  Object.h  Object_.h  error.h  object.h
src/webbridge/Impl/: BindingHelpers.h  Concepts.h  ErrorHandler.cpp  ErrorHandler.h  EventImpl.h  ObjectRegistry.h  PropertyImpl.h  TypeRegistration.cpp  TypeRegistration.h
src/webbridge/Impl_/: concepts.h  error_handler.cpp  object_registry.h  property_impl.h  type_registration.h
src/webbridge/impl/: binding_helpers.h  concepts.h  dispatcher.h  error_handler.cpp  error_handler.h  event_impl.h  property_impl.h  thread_pool.cpp  thread_pool.h  type_registration.cpp  type_registration.h
tools/: README.md  discoverer.py  generate.py  parser.py  test_parser.py  test_tstypes.py  tstypes.py  typescript_types.py  webbridge_parser.py
tools/templates/: impl.ts.j2  registration.h.j2  registration_header.h.j2  registration_impl.cpp.j2  types.d.ts.j2
